# homepot-client

./: .dockerignore  .env.example  .flake8  .gitignore  .readthedocs.yaml  .trufflehog-test.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FRONTEND_REVIEW.md  LICENSE  MONOREPO_SUMMARY.md  Makefile  README.md  SECURITY.md  WEBSITE_TESTING_GUIDE.md  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.override.yml.example  docker-compose.yml  homepot.db  mkdocs.yml  pyproject.toml  requirements.txt  test_api.py  test_phase3.py
backend/: .agent_retry_queue.json  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  homepot_agent.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_validation_test.sh
backend/data/: homepot.db
backend/docs/: UserAuthenticationAPI.md  real-device-agent.md
backend/homepot_client/: config.py  database.py  main.py
backend/homepot_client/app/: auth_utils.py  main.py
backend/homepot_client/app/api/API_v1/: Api.py
backend/homepot_client/app/api/API_v1/Endpoints/: AgentsEndpoints.py  ClientEndpoint.py  DevicesEndpoints.py  HealthEndpoint.py  JobsEndpoints.py  PushNotificationEndpoint.py  SitesEndpoint.py  UserRegisterEndpoint.py
backend/homepot_client/app/api/API_v1/Endpoints/Mobivisor/: MobivisorDeviceEndpoints.py  __init__.py
backend/homepot_client/app/models/: UserRegisterModel.py
backend/homepot_client/app/utils/: mobivisor_request.py
backend/homepot_client/push_notifications/: __init__.py  apns_apple.py  web_push.py  wns_windows.py
backend/homepot_client/push_notifications/utils/: authentication.py
backend/scripts/: create_admin.py
backend/src/agent/: __init__.py  agent-config.json  agent_api.py  real_device_agent.py  requirements-app.txt
backend/src/agent/utils/: device_dna.py
backend/src/data/: homepot.db
backend/src/homepot/: __init__.py  agents.py  audit.py  cli.py  cli_timescaledb.py  client.py  config.py  database.py  error_logger.py  main.py  models.py  orchestrator.py  request_metrics.py  seed_factories.py  timescale.py
backend/src/homepot/agent/: __init__.py  agent-config.json  agent_api.py  cli.py  credential_storage.py  identity.py  mock_dna.json  mock_telemetry.json  real_device_agent.py  requirements-app.txt
backend/src/homepot/agent/utils/: __init__.py  command_poller.py  device_dna.py  heartbeat.py  hostname_encoding.py  local_ipc.py  log_setup.py  proxy_settings.py  push_listener.py  real_device_discovery.py  retry_queue.py  telemetry.py  wns_push.py
backend/src/homepot/ai/: __init__.py  analytics_service.py  failure_predictor.py  job_scheduler.py  llm_service.py
backend/src/homepot/app/: auth_utils.py  main.py
backend/src/homepot/app/api/: __init__.py
backend/src/homepot/app/api/API_v1/: Api.py
backend/src/homepot/app/api/API_v1/Endpoints/: AIEndpoint.py  AgentHeartbeatEndpoint.py  AgentRegisterEndpoint.py  AgentStatusEndpoint.py  AgentTelemetryEndpoint.py  AgentsEndpoints.py  AnalyticsEndpoint.py  ClientEndpoint.py  DashboardEndpoint.py  DeviceCommandsEndpoint.py  DeviceCredentialEndpoint.py  DeviceProvisionEndpoint.py  DeviceSimulatorEndpoint.py  DevicesEndpoints.py  EnrolmentIntentsEndpoint.py  HealthEndpoint.py  JobsEndpoints.py  PushNotificationEndpoint.py  SiteSchedulesEndpoint.py  SitesEndpoint.py  TenantsEndpoint.py  UIEndpoint.py  UserRegisterEndpoint.py  __init__.py
backend/src/homepot/app/api/API_v1/Endpoints/Mobivisor/: LogsEndpoint.py  MobivisorMobileApps.py  (+4 more)
backend/src/homepot/app/db/: database.py
backend/src/homepot/app/middleware/: analytics.py
backend/src/homepot/app/models/: AnalyticsModel.py  DeviceModel.py  JobstatusModel.py  UserModel.py  UserRegisterModel.py  __init__.py  mobivisor_models.py
backend/src/homepot/app/repositories/: __init__.py  agent_repository.py
backend/src/homepot/app/schemas/: __init__.py  agent.py  enrolment.py  provision.py  schemas.py
backend/src/homepot/app/services/: __init__.py  agent_service.py  lifecycle_service.py
backend/src/homepot/app/utils/: limiter.py  mobivisor_request.py  smart_filter.py
backend/src/homepot/migrations/: env.py  script.py.mako  timescaledb_aggregates.py
backend/src/homepot/migrations/versions/: 20260331_add_dna_and_heartbeat_fields.py  20260719_add_device_credentials.py  20260719_add_enrolment_intents.py  20260719_add_lifecycle_epochs.py  20260719_add_lifecycle_health_state.py  20260719_add_tenant_site_membership.py  20260720_add_device_assignments_events.py
backend/src/homepot/push_notifications/: __init__.py  apns_apple.py  base.py  factory.py  fcm_linux.py  mqtt_push.py  simulation.py  web_push.py  wns_windows.py
backend/src/homepot/push_notifications/utils/: __init__.py  authentication.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_bootstrap.py  test_agent_command_polling.py  test_agent_credential_storage.py  test_agent_endpoints.py  test_agent_heartbeat_telemetry.py  test_agent_identity.py  test_agent_local_ipc.py  test_agent_production_hardening.py  test_agent_retry_queue.py  test_ai_context_builder.py  test_ai_db_integration.py  test_ai_integration.py  test_ai_nlp_integration.py  test_ai_prediction.py  test_ai_refactor.py  test_ai_service.py  test_analysis_modes.py  test_analytics.py  test_apns_apple.py  test_authorization.py  test_cli.py  test_client.py  test_config_direct.py  test_config_history.py  test_database.py  test_database_pagination.py  test_device_commands.py  test_device_dna.py  test_device_metrics.py  test_device_unpair.py  test_devices_by_site.py  test_enrolment_intents.py  test_error_logging.py  test_fcm_linux.py  test_google_auth.py  test_homepot_integration.py  test_lifecycle.py  test_live_api.py  (+17 more)
backend/utils/: __init__.py  check_error_logs.py  check_schedules.py  create_admin.py  create_analytics_tables.py  demo_ai_scenario.py  demo_analytics.py  generate_traffic.py  populate_schedules.py  real_device_agent.py  run_fleet_simulation.py  run_lifecycle_emulator.py  seed_data.py  test_config_direct.py  test_config_history.py  test_error_logging.py  validate_analytics.py  validate_data_collection.py  visualize_progress.py
(+385 files in other folders)
